--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -17,7 +17,7 @@
             <div class="col-md-3 d-flex align-items-center">
               <% if post.image.attached? %>
                 <div class="p-2" style="height: 170px; width: 100%;">
-                  <%= image_tag post.image.variant(:thumb), class: "rounded-start", style: "object-fit: cover; height: 100%; width: 100%;" %>
+                  <%= image_tag post.image.variant(:thumb), class: "rounded-start", style: "object-fit: cover; height: 100%; width: 100%;", loading: "lazy" %>
                 </div>
               <% end %>
             </div>
