--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div>
   <div class="mb-4">
-    <%= image_tag "about.jpg", class: "img-fluid rounded w-100" %>
+    <%= image_tag "about.png", class: "img-fluid rounded w-100" %>
   </div>
 
   <div class="row">
