--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <article>
     <div class="mb-4">
-      <%= image_tag "old_main.jpg", class: "img-fluid rounded w-100", loading: "lazy" %>
+      <%= image_tag "new_main_data.png", class: "img-fluid rounded w-100", loading: "lazy" %>
     </div>
 
     <h1 class="mb-3 h2">Tecnología Consciente, Soluciones Digitales a tu Medida.</h1> 
