--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -42,12 +42,12 @@
       <div class="comments-container">
         <h3 class="mb-4 pb-2 border-bottom">
           <i class="fa-solid fa-comments"></i> 
-          <span id="comment_count"><%= pluralize(@post.comments.count, "comentario") %></span>
+          <span id="comment_count"><%= pluralize(@post.comments.approved.count, "comentario") %></span>
         </h3>
         
-        <% if @post.comments.any? %>
+        <% if @post.comments.approved.any? %>
           <div id="comments" class="mb-5">
-            <% @post.comments.order(created_at: :desc).each do |comment| %>
+            <% @post.comments.approved.order(created_at: :desc).each do |comment| %>
               <%= render "comments/comment", comment: comment %>
             <% end %>
           </div>
