acclaim updates & about updates

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -32,13 +32,29 @@
         <div class="text-center mt-4 mb-5">
           <p class="fw-bold mb-2">Certificaciones Destacadas:</p>
           <div class="d-inline-block me-3" data-bs-toggle="tooltip" title="Offensive Security Certified Professional (OSCP)">
-            <%= image_tag "oscp-acclaim.png", alt: "OSCP Certification", width: "100" %>
+            <a href="https://www.credly.com/badges/fe965ff8-295b-4732-957b-9fdd02345fee/public_url" target="_blank" rel="noopener noreferrer">
+              <%= image_tag "oscp-acclaim.png", alt: "OSCP Certification", width: "100" %>
+            </a>
           </div>
-          <div class="d-inline-block me-3" data-bs-toggle="tooltip" title="Offensive Security Wireless Professional (OSWP)">
-            <%= image_tag "oswp-acclaim.png", alt: "OSWP Certification", width: "100" %>
+          <div class="d-inline-block me-3" data-bs-toggle="tooltip" title="Offensive Security Certified Expert (OSCE)">
+            <a href="https://www.credly.com/badges/dceb04e8-b09b-41a0-921c-ccef72c0819b/public_url" target="_blank" rel="noopener noreferrer">
+              <%= image_tag "osce-acclaim.png", alt: "OSCE Certification", width: "100" %>
+            </a>
           </div>
           <div class="d-inline-block" data-bs-toggle="tooltip" title="Offensive Security Web Expert (OSWE)">
-            <%= image_tag "oswe-acclaim.png", alt: "OSWE Certification", width: "100" %>
+            <a href="https://www.credly.com/badges/edd92d83-4fb5-46ca-aacd-7eafec615007/public_url" target="_blank" rel="noopener noreferrer">
+              <%= image_tag "oswe-acclaim.png", alt: "OSCE Certification", width: "100" %>
+            </a>          
+          </div>
+          <div class="d-inline-block me-3" data-bs-toggle="tooltip" title="Offensive Security Wireless Professional (OSWP)">
+            <a href="https://www.credly.com/badges/bab572ab-edcc-4df4-a50e-2153d8442b7f/public_url" target="_blank" rel="noopener noreferrer">
+              <%= image_tag "oswp-acclaim.png", alt: "OSWP Certification", width: "100" %>
+            </a>
+          </div>
+          <div class="d-inline-block me-3" data-bs-toggle="tooltip" title="AWS Certified Cloud Practitioner">
+            <a href="https://www.credly.com/badges/8f7e242f-03d4-4ac9-ab3c-33f4c1bc9a43/public_url" target="_blank" rel="noopener noreferrer">
+              <%= image_tag "aws-acclaim.png", alt: "AWS CCP", width: "100" %>
+            </a>
           </div>
         </div>
       </section>
