--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Greyhat - Explorando el Equilibrio entre la Tecnología y la Vida">
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 
 	<%= csrf_meta_tags %>
 	<%= csp_meta_tag %>
