--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -19,7 +19,7 @@
       <section>
         <h2 class="mb-4 text-primary"><i class="fas fa-user-circle me-2"></i>Conoce al Fundador</h2> <div class="d-flex flex-column flex-md-row align-items-center align-items-md-start mb-3 bg-white p-4 rounded shadow-sm">
           <div class="mb-3 mb-md-0 me-md-4 text-center">
-            <a href="http://linkedin.com/in/alexertech/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.alexertech.com/" target="_blank" rel="noopener noreferrer">
               <%= image_tag "0.jpg", class: "rounded-circle img-thumbnail" %>
             </a>
           </div>
