--- a/app/views/dashboards/comments.html.erb
+++ b/app/views/dashboards/comments.html.erb
@@ -91,8 +91,8 @@
           </table>
         </div>
         
-        <div class="d-flex justify-content-center mt-4">
-          <%= will_paginate @comments, class: 'pagination-sm' %>
+        <div class="text-center mt-4">
+          <%= will_paginate @comments, class: 'pagination pagination-sm justify-content-center' %>
         </div>
       <% else %>
         <div class="alert alert-info mb-0">
