--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -1,4 +1,3 @@
-
 <div>
   <h2 class="mb-4">Artículos</h2>
 
@@ -44,5 +43,15 @@
         </div>
       </div>
     <% end %>
+    
+    <% if @posts.empty? %>
+      <div class="col-12 text-center py-5">
+        <p class="text-muted">No hay artículos publicados actualmente.</p>
+      </div>
+    <% end %>
+  </div>
+  
+  <div class="d-flex justify-content-center my-4">
+    <%= will_paginate @posts, class: 'pagination' %>
   </div>
 </div>
